--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <section id="About">
     <h1>About()</h1>
-    <div class="maincontainer" style="display: flex; align-items: center; margin-left: 60px;">
+    <div class="maincontainer" style="padding-left: 15px; display: flex; align-items: center; width: 100%; justify-content: center;">
       <div id="container">
         <header>
               <div class="button red"></div>
